# live-chat-swagger/src/main/java/com/github/tunashred/dto/ProducerParams.java
@@ -1,0 +1,16 @@
+package com.github.tunashred.dto;
+
+
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.experimental.FieldDefaults;
+
+@Data
+@AllArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class ProducerParams {
+    String channel;
+    String username;
+    String message;
+}
